--- a/SpiceItUp/Dockerfile
+++ b/SpiceItUp/Dockerfile
@@ -1,4 +1,4 @@
 FROM mcr.microsoft.com/dotnet/sdk:5.0
-COPY ./SpiceItUp/bin/Release/net5.0/publish/ App/
+COPY ./bin/Release/net5.0/publish/ App/
 WORKDIR /App
 CMD ASPNETCORE_URLS=http://*:$PORT dotnet SpiceItUp.dll
